fix overflow behavior for extremely small screens

--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,15 @@ section.qestionAnswer h2 {
   margin: 10px;
   float: left;
   width: 40%;
-  border-right: 5px dotted #ffcfe6; 
+  border-right: 5px dotted #ffcfe6;
+  overflow: hidden;
 }
 
 section.qestionAnswer p {
   margin: 10px;
   float: left;
   width: 40%;
+  overflow: hidden;
 }
 
 section.seperate {
